[gd_scene load_steps=3 format=3 uid="uid://cj7e8flam2q4l"]

[ext_resource type="Script" path="res://scripts/ui/animal_stats_panel.gd" id="1_stats_panel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.12, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.35, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0

[node name="AnimalStatsPanel" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_stats_panel")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AnimalTypeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Rabbit"

[node name="MoodIndicator" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ðŸ˜Š"
horizontal_alignment = 2
vertical_alignment = 1

[node name="EnergyRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_constants/separation = 12

[node name="EnergyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/EnergyRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Energy"
vertical_alignment = 1

[node name="EnergyBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/EnergyRow"]
custom_minimum_size = Vector2(200, 44)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 3.0
value = 3.0
nine_patch_stretch = true
tint_under = Color(0.2, 0.18, 0.15, 1)
tint_progress = Color(0.4, 0.8, 0.3, 1)

[node name="StatsRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="SpeedContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/StatsRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsRow/SpeedContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.55, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Speed"
horizontal_alignment = 1

[node name="SpeedValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsRow/SpeedContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = "4"
horizontal_alignment = 1

[node name="StrengthContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/StatsRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="StrengthLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsRow/StrengthContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.55, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Strength"
horizontal_alignment = 1

[node name="StrengthValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsRow/StrengthContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = "2"
horizontal_alignment = 1

[node name="SpecialtyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "Speed +20% gathering"
horizontal_alignment = 1
vertical_alignment = 1
